[package]
name = "four_chan_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.11", features = ["json","blocking"]}
futures = "0.3"
serde = {version = "1.0.4", features=["derive"]}
serde_json = "1.0.82"
tokio = {version="1", features=["full"]}
colored = "2.0.0"
time = "*"